# NiCMidi

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  Makefile.am  README.md  configure.ac  cscope.out  myjdkmidi.cbp  myjdkmidi.cscope_file_list  myjdkmidi.depend  myjdkmidi.layout  prova_clock.cpp
doc/html/: _h_o_w__p_l_a_y_s.html  _l_o_a_d__p_l_a_y.html  _m_e_s_s__t_r_a_c_k__m_u_l_t_i.html  _n_o_t_i_f_i_e_r_s.html  _n_u_m_b_e_r_i_n_g.html  _o_t_h_e_r__m_i_d_i_t_i_c_k_s.html  _o_v_e_r_v_i_e_w.html  _o_v_e_r_v_i_e_w.js  _p_r_o_c_e_s_s_o_r_s.html  _r_e_c_o_r_d_i_n_g.html  advancedrecorder_8h_source.html  advancedsequencer_8h_source.html  annotated.html  annotated_dup.js  class_advanced_sequencer-members.html  class_advanced_sequencer.html  class_advanced_sequencer.js  class_m_i_d_i_file_read_multi_track-members.html  class_m_i_d_i_in_driver-members.html  class_m_i_d_i_in_driver.html  class_m_i_d_i_manager-members.html  class_m_i_d_i_manager.html  class_m_i_d_i_manager.js  class_m_i_d_i_matrix-members.html  class_m_i_d_i_matrix.html  class_m_i_d_i_matrix.js  class_m_i_d_i_message-members.html  class_m_i_d_i_message.html  class_m_i_d_i_message.js  class_m_i_d_i_multi_processor-members.html  class_m_i_d_i_multi_processor.html  class_m_i_d_i_multi_track-members.html  class_m_i_d_i_multi_track.html  class_m_i_d_i_multi_track.js  class_m_i_d_i_multi_track_iterator-members.html  class_m_i_d_i_multi_track_iterator.html  class_m_i_d_i_multi_track_iterator.js  class_m_i_d_i_multi_track_iterator_state.html  class_m_i_d_i_out_driver-members.html  class_m_i_d_i_out_driver.html  (+175 more)
docs/html/: _h_o_w__p_l_a_y_s.html  _l_o_a_d__p_l_a_y.html  _m_e_s_s__t_r_a_c_k__m_u_l_t_i.html  _n_o_t_i_f_i_e_r_s.html  _n_u_m_b_e_r_i_n_g.html  _o_t_h_e_r__m_i_d_i_t_i_c_k_s.html  _o_v_e_r_v_i_e_w.html  _o_v_e_r_v_i_e_w.js  _p_r_o_c_e_s_s_o_r_s.html  _r_e_c_o_r_d_i_n_g.html  advancedrecorder_8h.html  advancedrecorder_8h_source.html  advancedsequencer_8h.html  advancedsequencer_8h_source.html  annotated.html  annotated_dup.js  class_advanced_recorder-members.html  class_advanced_recorder.html  class_advanced_recorder.js  class_advanced_sequencer-members.html  class_advanced_sequencer.html  class_advanced_sequencer.js  class_m_i_d_i_edit_multi_track-members.html  class_m_i_d_i_edit_multi_track.html  class_m_i_d_i_edit_multi_track.js  class_m_i_d_i_file_read_multi_track-members.html  class_m_i_d_i_file_read_multi_track.html  class_m_i_d_i_file_write_multi_track.html  class_m_i_d_i_in_driver-members.html  class_m_i_d_i_in_driver.html  class_m_i_d_i_in_driver.js  class_m_i_d_i_manager-members.html  class_m_i_d_i_manager.html  class_m_i_d_i_manager.js  class_m_i_d_i_matrix-members.html  class_m_i_d_i_matrix.html  class_m_i_d_i_matrix.js  class_m_i_d_i_message-members.html  class_m_i_d_i_message.html  class_m_i_d_i_message.js  (+235 more)
doxygen/: DoxygenLayout.xml  changelog.dox  doxyfile  doxygen.dox  doxygen2.dox  doxygroups.dox  examples.dox
examples/: Prova_tempi.mid  cscope.out  examples.cbp  examples.cscope_file_list  examples.depend  examples.layout  functions.cpp  functions.h  prova.mid  resta_in_ascolto.mid  test_MIDIIn.cpp  test_advancedrecorder.cpp  test_advancedsequencer.cpp  test_advancedsequencer_noinput.cpp  test_component.cpp  test_metronome.cpp  test_midiports.cpp  test_recorder.cpp  test_recorder2.cpp  test_sequencer.cpp  test_stepsequencer.cpp  test_stepsequencer.h  test_thru.cpp  test_writefile.cpp  twinkle.mid  vascorossi-sally.mid
examples/Prova_in_progress/: Prova_in_progress.cbp  Prova_in_progress.depend  Prova_in_progress.layout  main.cpp
examples/win32/: jdksmidi_test_drvwin32.cpp  test_advancedsequencer.cpp  test_stepsequencer.cpp  test_stepsequencer.h  test_win32_player.cpp  test_win32_player.h
include/: MQTTdriver.h  RtMidi.h  advancedrecorder.h  advancedsequencer.h  doxygen.h  doxygroups.h  driver.h  dump_tracks.h  file.h  fileread.h  filereadmultitrack.h  filewrite.h  filewritemultitrack.h  manager.h  matrix.h  metronome.h  midi.h  msg.h  multitrack.h  nimBLEdriver.h  notifier.h  old multitrack.h  old sequencer.h  old_driver.h  old_manager.h  process.h  processor.h  queue.h  recorder.h  sequencer.h  smpte.h  sysex.h  tempo.h  thru.h  tick.h  timer.h  track.h  world.h
jdk/: advancedsequencer.cpp  driver.cpp  driverwin32.cpp  dump_tracks.cpp  file.cpp  fileread.cpp  filereadmultitrack.cpp  filewrite.cpp  filewritemultitrack.cpp  manager.cpp  matrix.cpp  midi.cpp  midi_advancedsequencer.cpp  midi_driver.cpp  midi_file.cpp  midi_fileread.cpp  midi_filereadmultitrack.cpp  midi_filewrite.cpp  midi_filewritemultitrack.cpp  midi_matrix.cpp  midi_midi.cpp  midi_multitrack.cpp  midi_process.cpp  midi_queue.cpp  midi_tick.cpp  msg.cpp  notifier.cpp  process.cpp  queue.cpp  sequencer.cpp  smpte.cpp  sysex.cpp  track.cpp
jdk/jdkmidi/: advancedsequencer.h  driver.h  driverwin32.h  file.h  fileread.h  filereadmultitrack.h  filewrite.h  filewritemultitrack.h  manager.h  matrix.h  midi.h  msg.h  process.h  queue.h  smpte.h  tick.h  world.h
src/: HIDE track.cpp  MQTTdriver.cpp  RtMidi.cpp  advancedrecorder.cpp  advancedsequencer.cpp  driver.cpp  driverwin32.cpp  dump_tracks.cpp  file.cpp  fileread.cpp  filereadmultitrack.cpp  filewrite.cpp  filewritemultitrack.cpp  manager.cpp  manager_ORIGINAL.cpp  matrix.cpp  metronome.cpp  midi.cpp  msg.cpp  multitrack.cpp  nimBLEdriver.cpp  notifier.cpp  process.cpp  processor.cpp  queue.cpp  recorder v29 WITH BLOCKAGAIN.cpp  recorder.cpp  recorder_cpp.txt  sequencer.cpp  sequencer_cpp.txt  smpte.cpp  sysex.cpp  thru.cpp  tick.cpp  timer.cpp  track.cpp
